crates/alder-parse/src/snapshots/alder_parse__query__tests__sql_words_are_identifiers_outside_query.snap
---
source: crates/alder-parse/src/query.rs
description: "update(select, from, limit)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 28,
        },
    },
    value: Call {
        function: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 7,
                },
            },
            value: Var(
                "update",
            ),
        },
        arguments: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 8,
                    },
                    end: Position {
                        line: 1,
                        column: 14,
                    },
                },
                value: Var(
                    "select",
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 16,
                    },
                    end: Position {
                        line: 1,
                        column: 20,
                    },
                },
                value: Var(
                    "from",
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 22,
                    },
                    end: Position {
                        line: 1,
                        column: 27,
                    },
                },
                value: Var(
                    "limit",
                ),
            },
        ],
    },
}
