crates/alder-parse/src/snapshots/alder_parse__query__tests__update.snap
---
source: crates/alder-parse/src/query.rs
description: "query { update users set { name: ^newName } }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 46,
        },
    },
    value: Query(
        Update {
            table: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 16,
                    },
                    end: Position {
                        line: 1,
                        column: 21,
                    },
                },
                value: "users",
            },
            set: [
                Field {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 28,
                            },
                            end: Position {
                                line: 1,
                                column: 32,
                            },
                        },
                        value: "name",
                    },
                    value: Some(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 34,
                                },
                                end: Position {
                                    line: 1,
                                    column: 42,
                                },
                            },
                            value: Pin(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 35,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 42,
                                        },
                                    },
                                    value: Var(
                                        "newName",
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ],
            where_: None,
        },
    ),
}
