crates/alder-parse/src/snapshots/alder_parse__query__tests__update_set_multiple.snap
---
source: crates/alder-parse/src/query.rs
description: "query { update users set { name: ^n, active: true } }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 54,
        },
    },
    value: Query(
        Update {
            table: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 16,
                    },
                    end: Position {
                        line: 1,
                        column: 21,
                    },
                },
                value: "users",
            },
            set: [
                Field {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 28,
                            },
                            end: Position {
                                line: 1,
                                column: 32,
                            },
                        },
                        value: "name",
                    },
                    value: Some(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 34,
                                },
                                end: Position {
                                    line: 1,
                                    column: 36,
                                },
                            },
                            value: Pin(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 35,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 36,
                                        },
                                    },
                                    value: Var(
                                        "n",
                                    ),
                                },
                            ),
                        },
                    ),
                },
                Field {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 38,
                            },
                            end: Position {
                                line: 1,
                                column: 44,
                            },
                        },
                        value: "active",
                    },
                    value: Some(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 46,
                                },
                                end: Position {
                                    line: 1,
                                    column: 50,
                                },
                            },
                            value: Bool(
                                true,
                            ),
                        },
                    ),
                },
            ],
            where_: None,
        },
    ),
}
